Add dynamic pricing

--- a/src/app/translation/translations/de.json
+++ b/src/app/translation/translations/de.json
@@ -921,6 +921,9 @@
       "name": "Produktname",
       "sku": "Lagerhaltungsnummer",
       "defaultprice": "Standardpreis",
+      "dynamicprice": "Dynamic Price",
+      "minprice": "Min Price",
+      "maxprice": "Max Price",
       "ship": "Versand",
       "shipdelay": "Verspätung des Versands (Minuten)",
       "fulfillmentprovider": "Fulfillment Provider",
