--- a/src/app/translation/translations/en.json
+++ b/src/app/translation/translations/en.json
@@ -921,6 +921,9 @@
       "name": "Product Name",
       "sku": "SKU",
       "defaultprice": "Default Price",
+      "dynamicprice": "Dynamic Price",
+      "minprice": "Min Price",
+      "maxprice": "Max Price",
       "ship": "Ship",
       "shipdelay": "Shipping Delay (minutes)",
       "fulfillmentprovider": "Fulfillment Provider",
