--- a/src/app/translation/translations/hi.json
+++ b/src/app/translation/translations/hi.json
@@ -921,6 +921,9 @@
       "name": "उत्पाद का नाम",
       "sku": "SKU",
       "defaultprice": "डिफ़ॉल्ट मूल्य",
+      "dynamicprice": "Dynamic Price",
+      "minprice": "Min Price",
+      "maxprice": "Max Price",
       "ship": "अपवाहन",
       "shipdelay": "शिपिंग देरी (मिनट)",
       "fulfillmentprovider": "पूर्ति प्रदाता",
