--- a/src/app/translation/translations/hy.json
+++ b/src/app/translation/translations/hy.json
@@ -921,6 +921,9 @@
 			"name": "Ապրանքի անունը",
 			"sku": "SKU",
 			"defaultprice": "Սկզբնադիր գին",
+      "dynamicprice": "Dynamic Price",
+      "minprice": "Min Price",
+      "maxprice": "Max Price",
 			"ship": "Առաքում",
 			"shipdelay": "Առաքման ուշացում (րոպե)",
 			"fulfillmentprovider": "Ծառայության մատակարար",
