--- a/src/app/translation/translations/zh_CN.json
+++ b/src/app/translation/translations/zh_CN.json
@@ -921,6 +921,9 @@
       "name": "产品名称",
       "sku": "SKU",
       "defaultprice": "默认价格",
+      "dynamicprice": "Dynamic Price",
+      "minprice": "Min Price",
+      "maxprice": "Max Price",
       "ship": "运输",
       "shipdelay": "运输延迟（分钟）",
       "fulfillmentprovider": "履行供应商",
