--- a/src/app/translation/translations/de.json
+++ b/src/app/translation/translations/de.json
@@ -20,8 +20,16 @@
       "order": "Aufträge-Bericht",
       "summary": "Kurzbericht",
       "transaction": "Transaktionen-Bericht",
-      "merchant": "Händler-Bericht",
-      "affiliate": "Vertriebspartner-Bericht",
+      "cycle": {
+        "title": "Cycle Reports",
+        "daytoday": "Day-to-Day Report",
+        "cycle": "Cycle Report"
+      },
+      "traffic": {
+        "title": "Traffic Reports",
+        "merchant": "Händler-Bericht",
+        "affiliate": "Vertriebspartner-Bericht"
+      },
       "fulfillment": "Fulfillment Bericht",
       "retention": "Retention",
       "projection": "Projections"
