--- a/src/app/translation/translations/en.json
+++ b/src/app/translation/translations/en.json
@@ -20,8 +20,16 @@
       "order": "Order Report",
       "summary": "Summary Report",
       "transaction": "Transactions Report",
-      "merchant": "Merchants Report",
-      "affiliate": "Affiliates Report",
+      "cycle": {
+        "title": "Cycle Reports",
+        "daytoday": "Day-to-Day Report",
+        "cycle": "Cycle Report"
+      },
+      "traffic": {
+        "title": "Traffic Reports",
+        "merchant": "Merchants Report",
+        "affiliate": "Affiliates Report"
+      },
       "fulfillment": "Fulfillment Report",
       "retention": "Retention",
       "projection": "Projections"
