--- a/src/app/translation/translations/hy.json
+++ b/src/app/translation/translations/hy.json
@@ -248,7 +248,22 @@
 		"leavetitle": "Լքե՞լ:",
 		"leavetext": "Դուք ունեք չպահպանված փոփոխություններ, եթե փակեք այս եղանակավորողը, ապա փոփոխությունները կմերժվեն:",
 		"leavecancel": "ՉԵՂԱՐԿԵԼ",
-		"leaveleave": "ԼՔԵԼ"
+		"leaveleave": "ԼՔԵԼ",
+    "entityacl": {
+      "title": "Entity ACL Setup",
+      "basic": "BASIC",
+      "advanced": "ADVANCED",
+      "save": "SAVE",
+      "cancel": "CANCEL",
+      "visibility": "Visibility",
+      "user": "User",
+      "account": "Account",
+      "action": "Action",
+      "advancedtitle": "Advanced Entity Acl Permissions",
+      "edit": "Edit",
+      "remove": "Remove",
+      "nodata": "No Permissions Found."
+    }
 	},
 	"profile": {
 		"title": "Հատկագիր",
