Work on translations

--- a/src/app/translation/translations/en.json
+++ b/src/app/translation/translations/en.json
@@ -259,7 +259,7 @@
       "user": "User",
       "account": "Account",
       "action": "Action",
-      "advancedtitle": "Advanced Entity Acl Permissions",
+      "advancedtitle": "Advanced Entity ACL Permissions",
       "edit": "Edit",
       "remove": "Remove",
       "nodata": "No Permissions Found."
@@ -952,10 +952,10 @@
       "name": "Product Name",
       "sku": "SKU",
       "defaultprice": "Default Price",
-      "dynamicprice": "Dynamic Price",
-      "minprice": "Min Price",
-      "maxprice": "Max Price",
-      "ship": "Ship",
+      "dynamicprice": "Allow Dynamic Pricing",
+      "minprice": "Minimum Dynamic Price",
+      "maxprice": "Maximum Dynamic Price",
+      "ship": "Shippable Product",
       "shipdelay": "Shipping Delay (minutes)",
       "fulfillmentprovider": "Fulfillment Provider",
       "edit": "Edit Product",
