--- a/src/app/translation/translations/en.json
+++ b/src/app/translation/translations/en.json
@@ -50,6 +50,7 @@
       "productschedule": "Product Schedules",
       "campaign": "Campaigns",
       "emailtemplate": "Email Templates",
+      "eventhook": "Event Hooks",
       "traffic": {
         "title": "Traffic Setup",
         "affiliate": "Affiliates",
@@ -1179,6 +1180,44 @@
       "title": "Tracking Code",
       "subtitle": "Copy this Code to your HTML page header",
       "copy": "Copy to clipboard"
+    }
+  },
+  "eventhook": {
+    "index": {
+      "title": "Event Hooks",
+      "header": {
+        "id": "ID",
+        "name": "Name",
+        "active": "Active",
+        "type": "Event Type",
+        "created": "Created",
+        "updated": "Updated"
+      }
+    },
+    "tab": {
+      "general": "GENERAL DETAILS",
+      "custom": "EVENT HOOKS",
+      "shared": "MANAGED EVENT HOOKS"
+    },
+    "shared": {
+      "title": "Managed Event Hooks",
+      "subtitle": "Copy code of managed event hook",
+      "type": "Event Type",
+      "search": "Search"
+    },
+    "info": {
+      "title": "Event Hook Details",
+      "createtitle": "Create new Event Hook",
+      "name": "Name",
+      "type": "Event Type",
+      "active": "Event Hook Active",
+      "edit": "Edit Event Hook",
+      "save": "SAVE",
+      "cancel": "CANCEL"
+    },
+    "code": {
+      "title": "Event Hook Code",
+      "save": "SAVE"
     }
   },
   "emailtemplate": {
