Add watermark component

--- a/src/app/translation/translations/de.json
+++ b/src/app/translation/translations/de.json
@@ -1404,7 +1404,8 @@
     },
     "tab": {
       "general": "ALLGEMEINES",
-      "affiliate": "VERTRIEBSPARTNER"
+      "affiliate": "VERTRIEBSPARTNER",
+      "watermark": "WATERMARK"
     },
     "customer": {
       "title": "Über den Kunden",
