Add product schedule timeline

--- a/src/app/translation/translations/en.json
+++ b/src/app/translation/translations/en.json
@@ -1048,6 +1048,7 @@
     "tab": {
       "general": "GENERAL DETAILS",
       "cycle": "CYCLES",
+      "list": "LIST",
       "campaign": "CAMPAIGNS"
     },
     "info": {
