--- a/src/app/translation/translations/hy.json
+++ b/src/app/translation/translations/hy.json
@@ -1048,6 +1048,7 @@
 		"tab": {
 			"general": "ԸՆԴՀԱՆՈՒՐ ՄԱՆՐԱՄԱՍՆԵՐ",
       "cycle": "Ցիկլեր",
+      "list": "LIST",
 			"campaign": "ԱՐՇԱՎՆԵՐ"
 		},
 		"info": {
