--- a/src/app/translation/translations/zh_CN.json
+++ b/src/app/translation/translations/zh_CN.json
@@ -1048,6 +1048,7 @@
     "tab": {
       "general": "一般细节",
       "cycle": "周期",
+      "list": "LIST",
       "campaign": "活动"
     },
     "info": {
