--- a/src/app/translation/translations/de.json
+++ b/src/app/translation/translations/de.json
@@ -1048,6 +1048,7 @@
     "tab": {
       "general": "ALLGEMEINES",
       "cycle": "ZYKLEN",
+      "list": "LIST",
       "campaign": "Kampagnen"
     },
     "info": {
