--- a/src/app/translation/translations/hi.json
+++ b/src/app/translation/translations/hi.json
@@ -1048,6 +1048,7 @@
     "tab": {
       "general": "सामान्य विवरण",
       "cycle": "चक्र",
+      "list": "LIST",
       "campaign": "अभियान"
     },
     "info": {
